--- a/index.html
+++ b/index.html
@@ -1,27 +1,32 @@
-
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Formuła 1 - Gra</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gra Formuła 1</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div id="menu">
-    <h1>Formuła 1 – Gra</h1>
-    <div class="difficulty">
-      <button id="easyBtn" class="selected">Łatwy</button>
-      <button id="hardBtn">Trudny</button>
+    <h1>Formuła 1</h1>
+    <h2>Wybierz poziom trudności:</h2>
+    <div id="difficulty-selection">
+      <label><input type="radio" name="difficulty" value="easy" checked> Łatwy</label>
+      <label><input type="radio" name="difficulty" value="hard"> Trudny</label>
     </div>
-    <button id="startBtn">Start</button>
+    <button id="start-btn">Start</button>
   </div>
-  <canvas id="gameCanvas"></canvas>
-  <div id="controls">
-    <button id="leftBtn">←</button>
-    <button id="rightBtn">→</button>
+
+  <div id="game-container" class="hidden">
+    <canvas id="game"></canvas>
+    <div id="score">Wynik: 0</div>
+    <div id="controls">
+      <button id="left">←</button>
+      <button id="right">→</button>
+    </div>
+    <button id="toggle-controls">Pokaż/Ukryj Sterowanie</button>
   </div>
-  <button id="toggleControls">Pokaż sterowanie</button>
+
   <script src="js/script.js"></script>
 </body>
 </html>
